<resources>
    <string name="app_name">记忆大师</string>
    <string name="app_right">Copyright © 2019 Orange Technology. All Rights Reserved</string>
    <string name="app_reg_declaration">点击注册代表同意橘子科技《隐私协议》</string>
    <string name="app_log_declaration">点击登录代表同意橘子科技《隐私协议》</string>
    <string name="app_slogen">记忆，像吃橘子一样简单.</string>
    <string name="app_err_msg">系统异常</string>
    <string name="fragment_review_hintwords_completed">今天的任务已经完成啦！</string>
    <string name="fragment_review_hintwords_init">点击屏幕查看完整答案</string>
    <string name="fragment_review_words_completed">completed</string>
    <string name="activity_home_bottom_navigation_01">复习</string>
    <string name="activity_home_bottom_navigation_02">选书</string>
    <string name="activity_home_bottom_navigation_03">新建</string>
    <string name="activity_home_bottom_navigation_04">我的</string>
    <string name="fragment_personal_menu_01">记忆曲线</string>
    <string name="fragment_personal_menu_02">已完成</string>
    <string name="fragment_personal_menu_03">余额</string>
    <string name="fragment_personal_button_charge">去充值 ></string>
    <string name="fragment_personal_button_logout">退出登录</string>
    <string name="fragment_personal_button_change_psw">修改密码</string>
    <string name="fragment_personal_button_change_nickname">修改昵称</string>
    <string name="fragment_personal_button_log">点击登录/注册</string>
    <string name="fragment_personal_top_hint">累计打卡0天</string>
    <string name="item_book_selector_list_author">作者：唐家三少</string>
    <string name="item_book_selector_list_desciption">在每一个落雨的下午，悦子都会想起那个小木屋，和景子偶尔的微笑</string>
    <string name="item_book_selector_list_name">遥远的伤痕——《远山淡影》</string>
    <string name="item_book_selector_list_loading_num">下载量：1000</string>
    <string name="sys_book_description">
        《六个梦》是2005年6月长江文艺出版社出版的小说，作者是琼瑶。该小说讲述了六个梦，六个山盟海誓，六个缘定三生的故事。这部小说包括六个故事：《追寻》、《哑妻》、《三朵花》、《生命的鞭》、《归人记》和《流亡曲》。“黄叶无风自落，秋云不雨长阴，天若有情天亦老，摇摇幽恨难禁，惆怅旧欢如梦，觉来无处追寻！”……六个梦（追寻、哑妻、三朵花、生命之鞭、归人记、流亡曲），六个悬疑精彩、浪漫细腻、动人心弦却又凄美绝伦的故事就这样拉开了序幕……
    </string>
    <string name="sys_word">word</string>
    <string name="sys_answer">单词</string>
    <string name="action_settings">Settings</string>
</resources>
