<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="150dp">
        <ImageView
                android:id="@+id/book_selector_list_image"
                android:src="@drawable/bg_sys_book"
                android:scaleType="centerCrop"
                android:layout_height="120dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_width="120dp"/>
        <LinearLayout
                android:id="@+id/book_selector_list_info"
                android:layout_toEndOf="@+id/book_selector_list_image"
                android:orientation="vertical"
                android:layout_width="220dp"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/book_selector_list_title"
                    android:textSize="@dimen/sys_general_font_size"
                    android:maxLines="2"
                    android:text="@string/item_book_selector_list_name"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <TextView
                    android:id="@+id/book_selector_list_description"
                    android:textSize="@dimen/sys_mid_font_size"
                    android:maxLines="4"
                    android:textColor="@color/sys_gray"
                    android:paddingTop="5dp"
                    android:text="@string/item_book_selector_list_desciption"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:lineSpacingExtra="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/book_selector_author"
                        android:textSize="@dimen/sys_mini_font_size"
                        android:maxLines="4"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/item_book_selector_list_author"
                        android:lineSpacingExtra="4dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                <TextView
                        android:id="@+id/book_selector_list_load"
                        android:textSize="@dimen/sys_mini_font_size"
                        android:maxLines="4"
                        android:paddingTop="5dp"
                        android:layout_alignParentEnd="true"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/item_book_selector_list_loading_num"
                        android:lineSpacingExtra="4dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
            </RelativeLayout>




        </LinearLayout>

    </RelativeLayout>





</LinearLayout>