<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height_plus"
            android:background="@color/theme_yellow"
            android:fitsSystemWindows="true">

        <TextView
                android:id="@+id/fragment_review_txt_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sys_word"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/sys_black"
                android:textSize="@dimen/sys_huge_font_size" />
        <ImageView
                android:id="@+id/fragment_review_more_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:scaleType="centerInside"
                android:layout_marginBottom="@dimen/topbar_more_bottom_padding"
                android:layout_marginEnd="@dimen/topbar_more_padding"
                android:src="@drawable/ic_more_black"
                android:layout_width="@dimen/topbar_more_size"
                android:layout_height="@dimen/topbar_more_size"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.4dp"
              android:background="@color/sys_line"
              android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <TextView android:layout_width="match_parent"
              android:id="@+id/fragment_review_bt_show"
              android:text="@string/fragment_review_hintwords_init"
              android:gravity="center"
              android:background="@color/sys_white"
              android:visibility="visible"
              android:layout_height="match_parent"/>
    <ScrollView
            android:id="@+id/fragment_review_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                        <TextView android:id="@+id/fragment_review_txt_answer"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:text="@string/sys_answer"
                                  android:gravity="left"
                                  android:textColor="@color/sys_black"
                                  android:textSize="@dimen/sys_large_font_size"
                                  android:padding="16dp"
                        />
                        <View android:layout_width="match_parent"
                              android:layout_height="0.4dp"
                              android:background="@color/sys_line"
                              android:layout_alignParentBottom="true"/>
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <TextView
                        android:layout_width="match_parent"
                        android:text="示例"
                        android:padding="4dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/sys_small_font_size"
                        android:layout_height="28dp"/>

                <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                        <TextView android:id="@+id/fragment_review_txt_hint"
                                  android:layout_width="match_parent"
                                  android:layout_height="300dp"
                                  android:text="@string/sys_answer"
                                  android:gravity="left"
                                  android:textColor="@color/sys_black"
                                  android:textSize="@dimen/sys_large_font_size"
                                  android:padding="20dp"
                        />
                        <View android:layout_width="match_parent"
                              android:layout_height="0.4dp"
                              android:background="@color/sys_line"
                              android:layout_alignParentBottom="true"/>
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>




    </ScrollView>


    <RelativeLayout
            android:background="@color/sys_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:id="@+id/fragment_review_img"
                android:src="@drawable/bg_sys_book"
                android:layout_alignParentTop="true"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>

        <TextView
                android:id="@+id/fragment_review_bt_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/text_login_border"
                android:layout_marginBottom="30dp"
                android:text="认识"
                android:textColor="@color/sys_black"
                android:textSize="@dimen/sys_general_font_size"
                android:layout_marginStart="40dp"

                android:paddingBottom="5dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="5dp"
        />
        <TextView
                android:id="@+id/fragment_review_bt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/text_reg_border"
                android:layout_marginBottom="30dp"
                android:text="忘记"

                android:textColor="@color/sys_black"
                android:textSize="@dimen/sys_general_font_size"
                android:layout_marginEnd="40dp"

                android:paddingBottom="5dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="5dp"
        />
    </RelativeLayout>

</LinearLayout>